--- a/index.html
+++ b/index.html
@@ -48,15 +48,12 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-controls">
-					<label class="visually-hidden" for="btn1">Слайд 1
-						<input class="slider-controls-radio" id="btn1" type="radio" name="slider" value="btn1" checked>
-					</label>
-					<label class="visually-hidden" for="btn2">Слайд 2
-						<input class="slider-controls-radio" id="btn2" type="radio" name="slider" value="btn2">
-					</label>
-					<label class="visually-hidden" for="btn3">Слайд 3
-						<input class="slider-controls-radio" id="btn3" type="radio" name="slider" value="btn3">
-					</label>
+					<label class="visually-hidden" for="btn1">Слайд 1</label>
+					<input class="slider-controls-radio" id="btn1" type="radio" name="slider" value="btn1" checked>
+					<label class="visually-hidden" for="btn2">Слайд 2</label>
+					<input class="slider-controls-radio" id="btn2" type="radio" name="slider" value="btn2">
+					<label class="visually-hidden" for="btn3">Слайд 3</label>
+					<input class="slider-controls-radio" id="btn3" type="radio" name="slider" value="btn3">
 				</div>
 			</section>
 		</header>
@@ -118,7 +115,7 @@
 				</table>
 			</section>
 			<section class="partners">
-			<h2 class="visually-hidden">Партнеры</h2>
+				<h2 class="visually-hidden">Партнеры</h2>
 				<ul class="partners-list">
 					<li class="partners-item">
 						<a href="https://htmlacademy.ru/intensive/htmlcss">
@@ -158,15 +155,15 @@
 					<p>
 					тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
 					</p>
-					<a class="button button-contacts" href="contacts.html">Обратная связь</a>
+					<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
 				</div>
 			</section>
 			<section class="social">
 				<div class="footer-social">
 					<ul>
-						<li><a class="social-button" href="#">Вконтакте</a></li>
-						<li><a class="social-button" href="#">Фейсбук</a></li>
-						<li><a class="social-button" href="#">Инстаграм</a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм<></span></a></li>
 					</ul>
 				</div>
 				<div class="footer-social-slogan">
@@ -193,7 +190,7 @@
 				</p>
 				<button class="button" type="submit">Отправить</button>
 			</form>
-			<button class="modal-close" type="button">Закрыть</button>
+			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
 	</body>
 </html>
