--- a/shop.html
+++ b/shop.html
@@ -91,58 +91,58 @@
 					<a href="#" class="sorting-current">по цене</a>
 					<a href="#">по типу</a>
 					<a href="#">по названию</a>
-					<span class="sorting-up"></span>
-					<span class="sorting-down sorting-current"></span>
+					<button class="sorting-up" type="submit"><span class="visually-hidden">По возрастанию</span></button>
+					<button class="sorting-down sorting-current" type="submit"><span class="visually-hidden">По убыванию</span></button>
 				</div>
 				<ul class="catalog-list">
 					<li class="catalog-item">
 						<img src="img/sedona_preview.jpg" width="360" height="576" alt="шаблон сайта Sedona">
 						<div class="catalog-buy-item">
-							<h3><a class="button button-price" href="#">Sedona</a></h3>
+							<h3><a href="#">Sedona</a></h3>
 							<p>Информационный сайт для туристов</p>
-							<p class="catalog-item-price">9 900 руб.</p>
+							<p class="button button-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
 						<img src="img/pink_app_preview.jpg" width="360" height="576" alt="шаблон сайта Pink App">
 						<div class="catalog-buy-item">
-							<h3><a class="button button-price" href="#">Pink</a></h3>
+							<h3><a href="#">Pink</a></h3>
 							<p>Продуктовый лендинг приложения для iOS и Android</p>
-							<p class="catalog-item-price">9 900 руб.</p>
+							<p class="button button-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
 						<img src="img/barbershop_preview.jpg" width="360" height="576" alt="шаблон сайта Barbershop">
 						<div class="catalog-buy-item">
-							<h3><a class="button button-price" href="#">Barbershop</a></h3>
+							<h3><a href="#">Barbershop</a></h3>
 							<p>Сайт салоны красоты.<br />
 							Для мужчин, да.
 							</p>
-							<p class="catalog-item-price">9 900 руб.</p>
+							<p class="button button-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
 						<img src="img/mishka_preview.jpg" width="360" height="576" alt="шаблон сайта Mishka">
 						<div class="catalog-buy-item">
-							<h3><a class="button button-price" href="#">Mishka</a></h3>
+							<h3><a href="#">Mishka</a></h3>
 							<p>Интернет-магазин вязанных игрушек</p>
-							<p class="catalog-item-price">9 900 руб.</p>
+							<p class="button button-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
 						<img src="img/a_plus_preview.jpg" width="360" height="576" alt="шаблон сайта A Plus">
 						<div class="catalog-buy-item">
-							<h3><a class="button button-price" href="#">A Plus</a></h3>
+							<h3><a href="#">A Plus</a></h3>
 							<p>Лендинг курсов повышения квалификации</p>
-							<p class="catalog-item-price">9 900 руб.</p>
+							<p class="button button-price">9 900 руб.</p>
 						</div>
 					</li>
 					<li class="catalog-item">
 						<img src="img/kvast_preview.jpg" width="360" height="576" alt="шаблон сайта Кваст">
 						<div class="catalog-buy-item">
-							<h3><a class="button button-price" href="#">Кваст</a></h3>
+							<h3><a href="#">Кваст</a></h3>
 							<p>Промо-сайт производителя крафтового кваса</p>
-							<p class="catalog-item-price">9 900 руб.</p>
+							<p class="button button-price">9 900 руб.</p>
 						</div>
 					</li>
 				</ul>
@@ -158,7 +158,7 @@
 		<footer class="main-footer">
 			<section class="contacts">
 				<div class="footer-map">
-          <img src="img/map_contacts.jpg" width="" height="" alt="Карта">
+					<img src="img/map_contacts.jpg" width="" height="" alt="Карта">
 				</div>
 				<div class="footer-contacts">
 					<b>Nёrds Design Studio</b>
@@ -175,9 +175,9 @@
 			<section class="social">
 				<div class="footer-social">
 					<ul>
-						<li><a class="social-button" href="#">Вконтакте</a></li>
-						<li><a class="social-button" href="#">Фейсбук</a></li>
-						<li><a class="social-button" href="#">Инстаграм</a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
 					</ul>
 				</div>
 				<div class="footer-social-slogan">
@@ -204,7 +204,7 @@
 				</p>
 				<button class="button" type="submit">Отправить</button>
 			</form>
-			<button class="modal-close" type="button">Закрыть</button>
+			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
 	</body>
 </html>
