--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-controls">
-					<label class="visually-hidden" for="btn1">Слайд 1</label>
-					<input class="slider-controls-radio" id="btn1" type="radio" name="slider" value="btn1" checked>
-					<label class="visually-hidden" for="btn2">Слайд 2</label>
-					<input class="slider-controls-radio" id="btn2" type="radio" name="slider" value="btn2">
-					<label class="visually-hidden" for="btn3">Слайд 3</label>
-					<input class="slider-controls-radio" id="btn3" type="radio" name="slider" value="btn3">
+					<label for="btn1" tabindex="0">Слайд 1</label>
+					<input class="slider-controls-radio visually-hidden" id="btn1" type="radio" name="slider" checked>
+					<label for="btn2" tabindex="0">Слайд 2</label>
+					<input class="slider-controls-radio visually-hidden" id="btn2" type="radio" name="slider">
+					<label for="btn3" tabindex="0">Слайд 3</label>
+					<input class="slider-controls-radio visually-hidden" id="btn3" type="radio" name="slider">
 				</div>
 			</section>
 		</header>
