--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-controls">
-					<label for="btn1" tabindex="0">Слайд 1</label>
+					<label for="btn1" tabindex="0"><span class="visually-hidden">Слайд 1</span></label>
 					<input class="slider-controls-radio visually-hidden" id="btn1" type="radio" name="slider" checked>
-					<label for="btn2" tabindex="0">Слайд 2</label>
+					<label for="btn2" tabindex="0"><span class="visually-hidden">Слайд 2</span></label>
 					<input class="slider-controls-radio visually-hidden" id="btn2" type="radio" name="slider">
-					<label for="btn3" tabindex="0">Слайд 3</label>
+					<label for="btn3" tabindex="0"><span class="visually-hidden">Слайд 3</span></label>
 					<input class="slider-controls-radio visually-hidden" id="btn3" type="radio" name="slider">
 				</div>
 			</section>
@@ -163,7 +163,7 @@
 					<ul>
 						<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
 						<li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-						<li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм<></span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
 					</ul>
 				</div>
 				<div class="footer-social-slogan">
