--- a/shop.html
+++ b/shop.html
@@ -91,8 +91,8 @@
 					<a href="#" class="sorting-current">по цене</a>
 					<a href="#">по типу</a>
 					<a href="#">по названию</a>
-					<button class="sorting-up" type="submit"><span class="visually-hidden">По возрастанию</span></button>
-					<button class="sorting-down sorting-current" type="submit"><span class="visually-hidden">По убыванию</span></button>
+					<button class="sorting-up" type="button"><span class="visually-hidden">По возрастанию</span></button>
+					<button class="sorting-down sorting-current" type="button"><span class="visually-hidden">По убыванию</span></button>
 				</div>
 				<ul class="catalog-list">
 					<li class="catalog-item">
