--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Нёрдс</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic" rel="stylesheet">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
@@ -24,7 +26,7 @@
 			<section class="slider">
 				<h2 class="visually-hidden">Достоинства</h2>
 				<div class="slider-item">
-					<h2 class="slider-title">Долго, дорого, скрупулезно.</h2>
+					<h2>Долго, дорого,<br>скрупулезно.</h2>
 					<p>
 					Математически выверенный дизайн<br>
 					для вашего сайта или мобильного приложения.
@@ -32,7 +34,7 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-item">
-					<h2 class="slider-title">Любим математику как никто другой</h2>
+					<h2>Любим математику<br>как никто другой</h2>
 					<p>
 					Никакого креатива, только математические формулы<br>
 					для расчета идеальных пропорций.
@@ -40,7 +42,7 @@
 					<a class="button" href="#">Узнать больше</a>
 				</div>
 				<div class="slider-item">
-					<h2 class="slider-title">Только ночь, только хардкор</h2>
+					<h2>Только ночь,<br>только хардкор</h2>
 					<p>
 					Работать днем, как все? Мы против этого.<br>
 					Ближе к полуночи работа только начинается.
@@ -64,19 +66,19 @@
 				<h2 class="visually-hidden">Услуги</h2>
 				<ul class="services-list">
 					<li class="services-item site">
-						<h3 class="services-subtitle">Веб-сайты</h3>
+						<h3>Веб-сайты</h3>
 						<p>Мир никогда не будет прежним<br>
 						после того, как увидит ваш сайт!
 						</p>
 						<a class="button" href="#">Заказать</a>
 					</li>
 					<li class="services-item application">
-						<h3 class="services-subtitle">Приложения</h3>
+						<h3>Приложения</h3>
 						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
 						<a class="button" href="#">Заказать</a>
 					</li>
 					<li class="services-item present">
-						<h3 class="services-subtitle">Презентации</h3>
+						<h3>Презентации</h3>
 						<p>
 						Вы даже не подозреваете,<br>
 						насколько вы изумительны!
@@ -90,7 +92,7 @@
 				<h2 class="visually-hidden">Принципы работы</h2>
 				<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая дизайн-студия из Краснодара</b>
 				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-				<h4 class="rules-subtitle">Выполняем заказы на разработку:</h4>
+				<h4>Выполняем заказы на разработку:</h4>
 				<ul class="rules-work">
 					<li>Веб-сайтов любой сложности</li>
 					<li>Мобильных приложений для iOS и Android</li>
@@ -100,7 +102,7 @@
 			
 			<section class="statistic">
 				<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
-				<h4 class="rules-subtitle">С 2004 года любим точность во всем:</h4>
+				<h4>С 2004 года любим точность во всем:</h4>
 				<table class="statistic-information">
 					<tr>
 						<td>146%</td>
