--- a/index.html
+++ b/index.html
@@ -62,85 +62,94 @@
 
 		<main class="container">
 			<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
-			<section class="services">
-				<h2 class="visually-hidden">Услуги</h2>
-				<ul class="services-list">
-					<li class="services-item site">
-						<h3>Веб-сайты</h3>
-						<p>Мир никогда не будет прежним<br>
-						после того, как увидит ваш сайт!
-						</p>
-						<a class="button" href="#">Заказать</a>
-					</li>
-					<li class="services-item application">
-						<h3>Приложения</h3>
-						<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-						<a class="button" href="#">Заказать</a>
-					</li>
-					<li class="services-item present">
-						<h3>Презентации</h3>
-						<p>
-						Вы даже не подозреваете,<br>
-						насколько вы изумительны!
-						</p>
-						<a class="button" href="#">Заказать</a>
-					</li>
-				</ul>
-			</section>
 			
-			<section class="rules">
-				<h2 class="visually-hidden">Принципы работы</h2>
-				<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая дизайн-студия из Краснодара</b>
-				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-				<h4>Выполняем заказы на разработку:</h4>
-				<ul class="rules-work">
-					<li>Веб-сайтов любой сложности</li>
-					<li>Мобильных приложений для iOS и Android</li>
-					<li>Слайдшоу и видео для корпоративных презентаций</li>
-				</ul>
-			</section>
+			<div class="index-columns">
+				<section class="services">
+					<h2 class="visually-hidden">Услуги</h2>
+					<ul class="services-list">
+						<li class="services-item site">
+							<h3>Веб-сайты</h3>
+							<p>Мир никогда не будет прежним<br>
+							после того, как увидит ваш сайт!
+							</p>
+							<a class="button" href="#">Заказать</a>
+						</li>
+						<li class="services-item application">
+							<h3>Приложения</h3>
+							<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+							<a class="button" href="#">Заказать</a>
+						</li>
+						<li class="services-item present">
+							<h3>Презентации</h3>
+							<p>
+							Вы даже не подозреваете,<br>
+							насколько вы изумительны!
+							</p>
+							<a class="button" href="#">Заказать</a>
+						</li>
+					</ul>
+				</section>
+			</div>
 			
-			<section class="statistic">
-				<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
-				<h4>С 2004 года любим точность во всем:</h4>
-				<table class="statistic-information">
-					<tr>
-						<td>146%</td>
-						<td>100%</td>
-						<td>50%</td>
-					</tr>
-					<tr>
-						<th>Уровень самоотдачи</th>
-						<th>Соблюдение сроков</th>
-						<th>Минимальная предоплата</th>
-					</tr>
-				</table>
-			</section>
-			<section class="partners">
-				<h2 class="visually-hidden">Партнеры</h2>
-				<ul class="partners-list">
-					<li class="partners-item">
-						<a href="https://htmlacademy.ru/intensive/htmlcss">
-							<img src="img/logo_html_academy.png" width="260" height="180" alt="Логотип HTML Academy">
-						</a>
-					</li>
-					<li class="partners-item">
-						<a href="#">
-							<img src="img/logo_borodinski.png" width="260" height="180" alt="Логотип барбершопа «Бородинский»">
-						</a>
-					</li>
-					<li class="partners-item">
-						<a href="#">
-							<img src="img/logo_pink.png" width="260" height="180" alt="Логотип Pink">
-						</a>
-					</li>
-					<li class="partners-item">
-						<a href="#">
-							<img src="img/logo_mishka.png" width="260" height="180" alt="Логотип Mishka">
-						</a>
-					</li>
-				</ul>
-			</section>
+			<div class="index-columns">
+				<section class="rules">
+					<h2 class="visually-hidden">Принципы работы</h2>
+					<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая<br>
+					дизайн-студия из Краснодара</b>
+					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+					<h4>Выполняем заказы на разработку:</h4>
+					<ul class="rules-work">
+						<li>Веб-сайтов любой сложности</li>
+						<li>Мобильных приложений для iOS и Android</li>
+						<li>Слайдшоу и видео для корпоративных презентаций</li>
+					</ul>
+				</section>
+			
+				<section class="statistic">
+					<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
+					<h4>С 2004 года любим точность во всем:</h4>
+					<table class="statistic-information">
+						<tr>
+							<td>146%</td>
+							<td>100%</td>
+							<td>50%</td>
+						</tr>
+						<tr>
+							<th>Уровень самоотдачи</th>
+							<th>Соблюдение сроков</th>
+							<th>Минимальная предоплата</th>
+						</tr>
+					</table>
+				</section>
+			</div>
+			
+			<div class="index-columns">
+				<section class="partners">
+					<h2 class="visually-hidden">Партнеры</h2>
+					<ul class="partners-list">
+						<li class="partners-item">
+							<a href="https://htmlacademy.ru/intensive/htmlcss">
+								<img src="img/logo_html_academy.png" width="260" height="180" alt="Логотип HTML Academy">
+							</a>
+						</li>
+						<li class="partners-item">
+							<a href="#">
+								<img src="img/logo_borodinski.png" width="260" height="180" alt="Логотип барбершопа «Бородинский»">
+							</a>
+						</li>
+						<li class="partners-item">
+							<a href="#">
+								<img src="img/logo_pink.png" width="260" height="180" alt="Логотип Pink">
+							</a>
+						</li>
+						<li class="partners-item">
+							<a href="#">
+								<img src="img/logo_mishka.png" width="260" height="180" alt="Логотип Mishka">
+							</a>
+						</li>
+					</ul>
+				</section>
+			</div>
 		</main>
 
 		<footer class="main-footer">
@@ -154,7 +163,7 @@
 					191186, Санкт-Петербург,<br>
 					ул. Б. Конюшенная, д. 19/8
 					</p>
-					<p>
+					<p class="mobile">
 					тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
 					</p>
 					<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
