--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,9 @@
 		</header>
 
 		<main class="container">
-			<h1 class="page-title">Магазин готовых проектов</h1>
+			<div class="page-title">
+				<h1>Магазин готовых проектов</h1>
+			</div>
 			<section class="filters">
 				<h2 class="visually-hidden">Фильтр товаров</h2>
 				<form class="filter" method="get" action="http://echo.htmlacademy.ru">
