--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Нёрдс</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
@@ -92,7 +92,7 @@
 				<h2 class="visually-hidden">Список шаблонов сайтов</h2>
 				<div class="sorting">
 					<b>Сортировать:</b>
-					<a href="#" class="sorting-current">по цене</a>
+					<a href="#">по цене</a>
 					<a href="#">по типу</a>
 					<a href="#">по названию</a>
 					<button class="sorting-up" type="button"><span class="visually-hidden">По возрастанию</span></button>
