--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Нёрдс</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
@@ -90,11 +90,11 @@
 				<h2 class="visually-hidden">Список шаблонов сайтов</h2>
 				<div class="sorting">
 					<b>Сортировать:</b>
-					<a href="#">по цене</a>
+					<a class="sorting-current">по цене</a>
 					<a href="#">по типу</a>
 					<a href="#">по названию</a>
-					<button class="sorting-up" type="button"><span class="visually-hidden">По возрастанию</span></button>
 					<button class="sorting-down sorting-current" type="button"><span class="visually-hidden">По убыванию</span></button>
+					<button class="sorting-up" type="button"><span class="visually-hidden">По возрастанию</span></button>
 				</div>
 				<ul class="catalog-list">
 					<li class="catalog-item">
@@ -168,8 +168,8 @@
 					191186, Санкт-Петербург,<br>
 					ул. Б. Конюшенная, д. 19/8
 					</p>
-					<p>
-					тел. +7(812) 275-75-75
+					<p class="mobile">
+					тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
 					</p>
 					<a class="button button-contacts" href="contacts.html">Обратная связь</a>
 				</div>
