Пытаюсь делать сетку

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 	</head>
 	<body>
 		<header class="main-header">
-
+			<nav class="main-navigation container">
+				<img class="main-header-logo" src="">
+				<div class="container">
+					<ul class="site-navigation"></ul>
+					<ul class="user-navigation"></ul>
+				</div>
+			</nav>
 		</header>
 	</body>
 </html>
