--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 	</head>
 	<body>
 		<header class="main-header">
-
+			<nav class="main-navigation container">
+				<img src="" class="main-navigation-logo">
+				<ul class="site-navigation"></ul>
+				<ul class="user-navigation"></ul>
+			</nav>
 		</header>
 	</body>
 </html>
