--- a/index.html
+++ b/index.html
@@ -8,14 +8,206 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="main-header">
-			<nav class="main-navigation container">
-
-				<img src="" class="main-navigation-logo">
-				<ul class="site-navigation"></ul>
-				<ul class="user-navigation"></ul>
-
+		<header class="main-header container">
+			<nav class="main-navigation">
+				<img class="" src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
+				<ul class="site-navigation">
+					<li><a href="info.html">Студия</a></li>
+					<li><a href="customers.html">Клиенты</a></li>
+					<li><a href="shop.html">Магазин</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+				</ul>
+				<ul class="user-navigation">
+					<li class="basket">
+						<a class="basket" href="basket.html">Корзина</a>
+					</li>
+				</ul>
 			</nav>
+			<section class="slider">
+				<h2 class="visually-hidden">Достоинства</h2>
+				<div class="slider-item">
+					<h2>Долго, дорого,<br>скрупулезно.</h2>
+					<p>
+					Математически выверенный дизайн<br>
+					для вашего сайта или мобильного приложения.
+					</p>
+					<a class="button" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-item">
+					<h2>Любим математику<br>как никто другой</h2>
+					<p>
+					Никакого креатива, только математические формулы<br>
+					для расчета идеальных пропорций.
+					</p>
+					<a class="button" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-item">
+					<h2>Только ночь,<br>только хардкор</h2>
+					<p>
+					Работать днем, как все? Мы против этого.<br>
+					Ближе к полуночи работа только начинается.
+					</p>
+					<a class="button" href="#">Узнать больше</a>
+				</div>
+				<div class="slider-controls">
+					<label for="btn1" tabindex="0"><span class="visually-hidden">Слайд 1</span></label>
+					<input class="slider-controls-radio visually-hidden" id="btn1" type="radio" name="slider" checked>
+					<label for="btn2" tabindex="0"><span class="visually-hidden">Слайд 2</span></label>
+					<input class="slider-controls-radio visually-hidden" id="btn2" type="radio" name="slider">
+					<label for="btn3" tabindex="0"><span class="visually-hidden">Слайд 3</span></label>
+					<input class="slider-controls-radio visually-hidden" id="btn3" type="radio" name="slider">
+				</div>
+			</section>
 		</header>
+
+		<main class="container">
+			<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
+			
+				<section class="services">
+					<h2 class="visually-hidden">Услуги</h2>
+					<ul class="services-list">
+						<li class="services-item site">
+							<h3>Веб-сайты</h3>
+							<p>Мир никогда не будет прежним<br>
+							после того, как увидит ваш сайт!
+							</p>
+							<a class="button" href="#">Заказать</a>
+						</li>
+						<li class="services-item application">
+							<h3>Приложения</h3>
+							<p>Покорите топ-10 приложений в AppStore и Google Play</p>
+							<a class="button" href="#">Заказать</a>
+						</li>
+						<li class="services-item present">
+							<h3>Презентации</h3>
+							<p>
+							Вы даже не подозреваете,<br>
+							насколько вы изумительны!
+							</p>
+							<a class="button" href="#">Заказать</a>
+						</li>
+					</ul>
+				</section>
+			
+			<div class="index-columns">
+				<section class="rules">
+					<h2 class="visually-hidden">Принципы работы</h2>
+					<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая<br>
+					дизайн-студия из Краснодара</b>
+					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+					<h4>Выполняем заказы на разработку:</h4>
+					<ul class="rules-work">
+						<li>Веб-сайтов любой сложности</li>
+						<li>Мобильных приложений для iOS и Android</li>
+						<li>Слайдшоу и видео для корпоративных презентаций</li>
+					</ul>
+				</section>
+			
+				<section class="statistic">
+					<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
+					<h4>С 2004 года любим точность во всем:</h4>
+					<table class="statistic-information">
+						<tr>
+							<td>146<sup>%</sup></td>
+							<td>100<sup>%</sup></td>
+							<td>50<sup>%</sup></td>
+						</tr>
+						<tr>
+							<th>
+							Уровень<br>
+							самоотдачи
+							</th>
+							<th>
+							Соблюдени<br>
+							сроков
+							</th>
+							<th>Минимальная<br>
+							предоплата
+							</th>
+						</tr>
+					</table>
+				</section>
+			</div>
+			
+			<div class="index-columns">
+				<section class="partners">
+					<h2 class="visually-hidden">Партнеры</h2>
+					<ul class="partners-list">
+						<li class="partners-item">
+							<a href="https://htmlacademy.ru/intensive/htmlcss">
+								<img src="img/logo_html_academy.png" width="260" height="180" alt="Логотип HTML Academy">
+							</a>
+						</li>
+						<li class="partners-item">
+							<a href="#">
+								<img src="img/logo_borodinski.png" width="260" height="180" alt="Логотип барбершопа «Бородинский»">
+							</a>
+						</li>
+						<li class="partners-item">
+							<a href="#">
+								<img src="img/logo_pink.png" width="260" height="180" alt="Логотип Pink">
+							</a>
+						</li>
+						<li class="partners-item">
+							<a href="#">
+								<img src="img/logo_mishka.png" width="260" height="180" alt="Логотип Mishka">
+							</a>
+						</li>
+					</ul>
+				</section>
+			</div>
+		</main>
+
+		<footer class="main-footer">
+			<section class="contacts">
+				<div class="footer-map">
+					<img src="img/map_contacts.jpg" width="" height="" alt="Карта">
+				</div>
+				<div class="footer-contacts">
+					<b>Nёrds Design Studio</b>
+					<p>
+					191186, Санкт-Петербург,<br>
+					ул. Б. Конюшенная, д. 19/8
+					</p>
+					<p class="mobile">
+					тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
+					</p>
+					<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
+				</div>
+			</section>
+			<section class="social">
+				<div class="footer-social">
+					<ul>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+						<li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+					</ul>
+				</div>
+				<div class="footer-social-slogan">
+					<b>Давайте дружить, это выгодно!</b>
+					<p>Скидка 10% для друзей из социальных сетей</p>
+				</div>
+			</section>
+		</footer>
+
+		<section class="modal modal-write-us">
+			<h2>Напишите нам</h2>
+			<form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+				<p class="write-us-item">
+					<label for="write-us-name">Ваше имя:</label>
+					<input id="write-us-name" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
+				</p>
+				<p class="write-us-item">
+					<label for="write-us-mail">Ваш e-mail:</label>
+					<input id="write-us-mail" type="email" name="mail" value="" placeholder="Для отправки ответа">
+				</p>
+				<p class="write-us-item">
+					<label for="text-field">Текст письма:</label>
+					<textarea name="text" id="text-field" rows="6" placeholder="В свободной форме"></textarea>
+				</p>
+				<button class="button" type="submit">Отправить</button>
+			</form>
+			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
+		</section>
 	</body>
 </html>
