Сетка главной страницы

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 				</section>
 			
 			<div class="index-columns">
+			
 				<section class="rules">
 					<h2 class="visually-hidden">Принципы работы</h2>
 					<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая<br>
@@ -127,12 +128,14 @@
 						</tr>
 					</table>
 				</section>
+				
 			</div>
 			
 			<div class="index-columns">
+			
 				<section class="partners">
 					<h2 class="visually-hidden">Партнеры</h2>
-					<ul class="partners-list">
+					<ul class="partners-list container">
 						<li class="partners-item">
 							<a href="https://htmlacademy.ru/intensive/htmlcss">
 								<img src="img/logo_html_academy.png" width="260" height="180" alt="Логотип HTML Academy">
@@ -155,7 +158,9 @@
 						</li>
 					</ul>
 				</section>
+				
 			</div>
+			
 		</main>
 
 		<footer class="main-footer">
@@ -175,7 +180,7 @@
 					<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
 				</div>
 			</section>
-			<section class="social">
+			<section class="social container">
 				<div class="footer-social">
 					<ul>
 						<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
