--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="main-header container">
-			<nav class="main-navigation">
+		<header class="main-header">
+			<nav class="main-navigation container">
 				<img class="" src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
 				<ul class="site-navigation">
 					<li><a href="info.html">Студия</a></li>
@@ -23,7 +23,7 @@
 					</li>
 				</ul>
 			</nav>
-			<section class="slider">
+			<section class="slider container">
 				<h2 class="visually-hidden">Достоинства</h2>
 				<div class="slider-item">
 					<h2>Долго, дорого,<br>скрупулезно.</h2>
@@ -33,7 +33,7 @@
 					</p>
 					<a class="button" href="#">Узнать больше</a>
 				</div>
-				<div class="slider-item">
+				<div class="slider-item2">
 					<h2>Любим математику<br>как никто другой</h2>
 					<p>
 					Никакого креатива, только математические формулы<br>
@@ -41,7 +41,7 @@
 					</p>
 					<a class="button" href="#">Узнать больше</a>
 				</div>
-				<div class="slider-item">
+				<div class="slider-item3">
 					<h2>Только ночь,<br>только хардкор</h2>
 					<p>
 					Работать днем, как все? Мы против этого.<br>
@@ -135,7 +135,7 @@
 			
 				<section class="partners">
 					<h2 class="visually-hidden">Партнеры</h2>
-					<ul class="partners-list container">
+					<ul class="partners-list">
 						<li class="partners-item">
 							<a href="https://htmlacademy.ru/intensive/htmlcss">
 								<img src="img/logo_html_academy.png" width="260" height="180" alt="Логотип HTML Academy">
