--- a/shop.html
+++ b/shop.html
@@ -174,7 +174,7 @@
 					<a class="button button-contacts" href="contacts.html">Обратная связь</a>
 				</div>
 			</section>
-			<section class="social">
+			<section class="social container">
 				<div class="footer-social">
 					<ul>
 						<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
